Followup to r114271 and r114064: 	- Fixed up the disable flyover message to be less stupid (and now without 	  line breaks) 	- Added prefixes to the tipsy css rules; however, this caused the whole 	  thing to shift ~200px upward -- passing to Yoni for help 	- Made the regex in $.articleFeedbackv5.buildLink() global -- stil working 	  on solution to other issues 	- Updated Link A to use the pipe-selector message rather than a literal 	  pipe character

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
@@ -1138,7 +1138,8 @@ body.skin-monobook .articleFeedbackv5-dialog {
 }
 
 /* Disable flyover */
-.tipsy-inner {
+.articleFeedbackv5-disable-flyover-tip-A .tipsy-inner,
+.articleFeedbackv5-disable-flyover-tip-E .tipsy-inner {
 	padding: 0;
 	border-color: #888;
 	max-width: 40em;
@@ -1148,16 +1149,19 @@ body.skin-monobook .articleFeedbackv5-dialog {
 	margin-bottom: 5px;
 	font-size: 0.9em;
 }
-.tipsy-arrow {
+.articleFeedbackv5-disable-flyover-tip-A .tipsy-arrow,
+.articleFeedbackv5-disable-flyover-tip-E .tipsy-arrow {
 	/* @embed */
 	background-image: url(images/tipsy-flyover.png);
 	width: 23px;
 	height: 11px;
 }
-.tipsy-nw .tipsy-arrow {
+.articleFeedbackv5-disable-flyover-tip-A.tipsy-nw .tipsy-arrow,
+.articleFeedbackv5-disable-flyover-tip-E.tipsy-nw .tipsy-arrow {
 	margin-top: -6px;
 }
-.tipsy-se .tipsy-arrow {
+.articleFeedbackv5-disable-flyover-tip-A.tipsy-se .tipsy-arrow,
+.articleFeedbackv5-disable-flyover-tip-E.tipsy-se .tipsy-arrow {
 	margin-top: -11px;
 }
 .articleFeedbackv5-disable-flyover {
